rollback to java 15 (#2971)